add ISC license

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jquery-login-form",
   "version": "0.1.0",
+  "license": "ISC",
   "homepage": "https://github.com/oakmac/jquery-login-form",
   "repository": {
     "type": "git",
